# CodeWinter

./: .gitignore  LICENSE  README.md  README.zh-CN.md  read.md
00-control-plane/: active-queue.md  bootstrap-report.md  instance-manifest.md  manager-brief.md  start-here.md  thread-board.md  upgrade-log.md  upgrade-plan.md
00-control-plane/collab-requests/: README.md
00-control-plane/threads/: README.md
01-thread-rules/: ai-collaboration-protocol.md  manager-thread-charter.md  thread-coordination-layer.md
02-manager-toolkit/: archive-bundle.md  archive-direct.md  bootstrap-greenfield.md  bootstrap-manager.md  collab-request.md  quick-prompts.md  thread-handoff.md  thread-resume.md  thread-runtime-update.md  thread-start.md
03-inbox/: README.md
04-task-packets/: README.md
04-task-packets/_template/: packet.md
05-deliverables/: README.md
10-services/: README.md
20-chains/: README.md
30-handoffs/: README.md
40-evidence/: README.md
50-decisions/: README.md
90-archive/: README.md
_console/: README.md
_console/app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
_console/src-tauri/: Cargo.toml  tauri.conf.json
_console/src-tauri/capabilities/: default.json
_console/src-tauri/icons/: icon.icns
_console/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  parser.rs  paths.rs  snapshot.rs  watcher.rs
_core/: bootstrap-v1.md  design-principles.md  glossary.md  release-governance-v1.md  release-manifest.md  release-notes-model-v1.md  tool-portability.md  upgrade-migration-v1.md  versioning-model-v1.md
(+20 files in other folders)
