[package]
name = "codewinter-operator-console"
version = "0.1.1"
description = "Downstream operator console for CodeWinter"
authors = ["YouHa"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "codewinter_operator_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
